feat(server): create blog with given id
